Add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link type="text/css" href="./resources/css/style.css" rel="stylesheet"/>
   </head>
   <body>
-
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="https://81dt6qnrbqq52gnbtt9d3enk93t916v27f2lgk62h30ki4n83pt0.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
   </body>
 </html>
