Add resources and base HTML content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <a href="https://81dt6qnrbqq52gnbtt9d3enk93t916v27f2lgk62h30ki4n83pt0.codecademy.cloud/#">Download Excursion (Coming soon!)</a><br/><br/>
+    <video src="./resources/videos/excursion.mp4" autoplay>Your browser doesn't support this video</video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <img src="./resources/images/camp.jpg"/>
+    <img src="./resources/images/phone.png"/>
+    <h2>Coming Soon for iPhone and Android</h2>
     <a href="https://81dt6qnrbqq52gnbtt9d3enk93t916v27f2lgk62h30ki4n83pt0.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+    <h3 class="copyright">© Excursion</h3>
   </body>
 </html>
